src/style.css
:root {
  line-height: 1.5;
  font-weight: 400;

  --primary-color: #2D3748
  --secondary-color: #35304B
  --background-color: #F8F9FA
  --text-color: #E2E8F0
  --button-color: #67E8F9
  --button-hover-color: #38BDF8
  color-scheme: light dark;
  color: var(--text-color);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}

body {
  background-color: #E9ECEF;
  color: #212529;
  font-family: Inter, sans-serif;
  margin: 0;
  padding: 61px 0 0 0;
  overflow-x: hidden;
}

nav {
  background-color: #2D3847;
}

footer {
  background-color: #212529;
  color: white;
}

h1 {
  font-size: 2.4rem;
  line-height: 1.1;
  text-align: center;
  margin-bottom: 25px;
}

h2 {
  font-size: 1.7rem;
  font-weight: 600;
  color: #212529;
}

h3 {
  font-size: 1.5rem;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #6C757D;
  color: white;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s;
}

.btn-hover:hover {
  background-color: #9AC3EB;
  color: black;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.card {
  padding: 2em;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }

.section-div {
  border: none;
  height: 1px;
  background-color: #9AC3EB;
  margin: 2rem auto;
  width: 60%;
  opacity: 0.6;
}
}

